[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/ui_elements/new_category_pop_up/new_category_pop_up.tscn" type="PackedScene" id=1]
[ext_resource path="res://entities/ui_elements/floating_button/floating_button.tscn" type="PackedScene" id=2]
[ext_resource path="res://entities/ui_elements/scrolling_list/scrolling_list.tscn" type="PackedScene" id=3]
[ext_resource path="res://themes/main.tres" type="Theme" id=4]
[ext_resource path="res://entities/screens/сategories_сatalogue_screen/сategories_сatalogue_screen.gd" type="Script" id=5]

[node name="CategoriesСatalogueScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -80.0
rect_min_size = Vector2( 0, 1200 )
theme = ExtResource( 4 )
script = ExtResource( 5 )

[node name="CategoriesContainer" parent="." instance=ExtResource( 3 )]

[node name="NewCategoryButton" parent="." instance=ExtResource( 2 )]

[node name="NewCategoryPopUp" parent="." instance=ExtResource( 1 )]
unique_name_in_owner = true
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -230.0
margin_top = -78.5
margin_right = 230.0
margin_bottom = 78.5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[connection signal="pressed" from="NewCategoryButton" to="." method="_on_NewCategoryButton_pressed"]
